WIP
-----------------------------
* Relative finish order, Track map Widget
  - Fixed a typo with option name "predication" (thanks to user "PeterVRC" for reports).

2.33.0 (2025-08-10)
-----------------------------
* Fuel Calculator
  - [New]Add "pit stop preview" bar on the left side of calculator panel, which visualizes pit stops as blue marks and stint laps as grey marks.
    Each pit stop mark shows a reference lap completion number. Total estimated number of race laps is displayed at bottom of the bar.
    Note, when "Energy consumption" value is higher than zero, pit stops and stint laps from preview bar will be calculated based on energy usage. Stint lap mark may not be displayed if there is not enough space to draw.
  - "Starting Fuel" and "Starting Energy" values now affect "total pit stops" outcome, as well as visualized on "pit stop preview" bar.

* RestAPI Module
  - Add togglable options for each accessible data from Rest API.
  - Add "enable_garage_setup_info" option, which enables access to "garage setup" data (RF2 & LMU). This is required for accessing various vehicle setup data.
  - Add "enable_session_info" option, which enables access to "session" data (RF2 & LMU). This is required for accessing various session data, such as time-scale.
  - Add "enable_weather_info" option, which enables access to "weather" data (RF2 & LMU). This is required for showing weather forecast.
  - Add "enable_vehicle_info" option, which enables access to "vehicle" data (LMU only). This is essential for accessing "virtual energy", "brake wear", "vehicle damage", "pit stop timing" data.

* Battery, Gear Widget
  - Add "high_battery_threshold, low_battery_threshold" options (requested by user "H4dro"), which set percentage threshold for displaying low or high battery charge warning indicator.
    Default high threshold is "95" percent (default color purple), low threshold is "10" percent (default color red).