@@ -1,5 +1,14 @@
 WIP
 -----------------------------
+* [New]Check for Updates
+  - Add "Check For Updates On Startup" global option (requested by user "coasting-nc"), which enables automatically checking for updates on startup, and displays notification message in main window.
+    This option is enabled by default, and can be disabled in "Application" dialog from "Config" menu in main window.
+    Note, this option is checked only once per startup, and notification message will only be displayed if new updates is available.
+    This option only checks for new updates info, it does not provide updates downloading or installing feature.
+  - Add "Check for Updates" option to "Help" menu in main window, which allows to manually check for updates. This option always displays notification message in main window.
+  - Add notification message for "Check for Updates" in main window. Click on the notification message will bring up a menu, where user can click "View Updates On GitHub" to open "Latest Releases" page in web browser, or "Dismiss" the message.
+  - Add "Check for Updates" message to console output.
+
 * Relative finish order, Track map Widget
   - Fixed a typo with option name "predication" (thanks to user "PeterVRC" for reports).
 
